--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Josh Woodcock <josh@j0w0.com>",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "gatsby": "^4.9.2",
     "gatsby-plugin-gatsby-cloud": "^4.9.0",
     "gatsby-plugin-image": "^2.9.0",
@@ -18,6 +19,7 @@
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
   },
